parse/C/tests/new_mul_ambig.output
State 12 conflicts: 1 shift/reduce
State 13 conflicts: 1 shift/reduce
State 26 conflicts: 1 shift/reduce


Grammar

    0 $accept: main $end

    1 main: add_expr

    2 new_expression: NEW new_type_id

    3 new_type_id: type_specifier new_declarator_opt

    4 new_declarator: ptr_operator new_declarator_opt
    5               | direct_new_declarator

    6 new_declarator_opt: /* empty */
    7                   | new_declarator

    8 direct_new_declarator: '[' add_expr ']'

    9 type_specifier: VOID

   10 ptr_operator: '*'
   11             | '&'

   12 add_expr: mult_expr
   13         | add_expr '+' mult_expr
   14         | add_expr '-' mult_expr

   15 mult_expr: primary
   16          | mult_expr '*' primary
   17          | mult_expr '/' primary

   18 primary: new_expression
   19        | factor

   20 factor: '(' add_expr ')'
   21       | '(' ID ')' factor
   22       | ID


Terminals, with rules where they appear

$end (0) 0
'&' (38) 11
'(' (40) 20 21
')' (41) 20 21
'*' (42) 10 16
'+' (43) 13
'-' (45) 14
'/' (47) 17
'[' (91) 8
']' (93) 8
error (256)
ID (258) 21 22
NEW (259) 2
VOID (260) 9


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
main (16)
    on left: 1, on right: 0
new_expression (17)
    on left: 2, on right: 18
new_type_id (18)
    on left: 3, on right: 2
new_declarator (19)
    on left: 4 5, on right: 7
new_declarator_opt (20)
    on left: 6 7, on right: 3 4
direct_new_declarator (21)
    on left: 8, on right: 5
type_specifier (22)
    on left: 9, on right: 3
ptr_operator (23)
    on left: 10 11, on right: 4
add_expr (24)
    on left: 12 13 14, on right: 1 8 13 14 20
mult_expr (25)
    on left: 15 16 17, on right: 12 13 14 16 17
primary (26)
    on left: 18 19, on right: 15 16 17
factor (27)
    on left: 20 21 22, on right: 19 21


state 0

    0 $accept: . main $end

    ID   shift, and go to state 1
    NEW  shift, and go to state 2
    '('  shift, and go to state 3

    main            go to state 4
    new_expression  go to state 5
    add_expr        go to state 6
    mult_expr       go to state 7
    primary         go to state 8
    factor          go to state 9


state 1

   22 factor: ID .

    $default  reduce using rule 22 (factor)


state 2

    2 new_expression: NEW . new_type_id

    VOID  shift, and go to state 10

    new_type_id     go to state 11
    type_specifier  go to state 12


state 3

   20 factor: '(' . add_expr ')'
   21       | '(' . ID ')' factor

    ID   shift, and go to state 13
    NEW  shift, and go to state 2
    '('  shift, and go to state 3

    new_expression  go to state 5
    add_expr        go to state 14
    mult_expr       go to state 7
    primary         go to state 8
    factor          go to state 9


state 4

    0 $accept: main . $end

    $end  shift, and go to state 15


state 5

   18 primary: new_expression .

    $default  reduce using rule 18 (primary)


state 6

    1 main: add_expr .
   13 add_expr: add_expr . '+' mult_expr
   14         | add_expr . '-' mult_expr

    '+'  shift, and go to state 16
    '-'  shift, and go to state 17

    $default  reduce using rule 1 (main)


state 7

   12 add_expr: mult_expr .
   16 mult_expr: mult_expr . '*' primary
   17          | mult_expr . '/' primary

    '*'  shift, and go to state 18
    '/'  shift, and go to state 19

    $default  reduce using rule 12 (add_expr)


state 8

   15 mult_expr: primary .

    $default  reduce using rule 15 (mult_expr)


state 9

   19 primary: factor .

    $default  reduce using rule 19 (primary)


state 10

    9 type_specifier: VOID .

    $default  reduce using rule 9 (type_specifier)


state 11

    2 new_expression: NEW new_type_id .

    $default  reduce using rule 2 (new_expression)


state 12

    3 new_type_id: type_specifier . new_declarator_opt

    '['  shift, and go to state 20
    '*'  shift, and go to state 21
    '&'  shift, and go to state 22

    '*'       [reduce using rule 6 (new_declarator_opt)]
    $default  reduce using rule 6 (new_declarator_opt)

    new_declarator         go to state 23
    new_declarator_opt     go to state 24
    direct_new_declarator  go to state 25
    ptr_operator           go to state 26


state 13

   21 factor: '(' ID . ')' factor
   22       | ID .

    ')'  shift, and go to state 27

    ')'       [reduce using rule 22 (factor)]
    $default  reduce using rule 22 (factor)


state 14

   13 add_expr: add_expr . '+' mult_expr
   14         | add_expr . '-' mult_expr
   20 factor: '(' add_expr . ')'

    '+'  shift, and go to state 16
    '-'  shift, and go to state 17
    ')'  shift, and go to state 28


state 15

    0 $accept: main $end .

    $default  accept


state 16

   13 add_expr: add_expr '+' . mult_expr

    ID   shift, and go to state 1
    NEW  shift, and go to state 2
    '('  shift, and go to state 3

    new_expression  go to state 5
    mult_expr       go to state 29
    primary         go to state 8
    factor          go to state 9


state 17

   14 add_expr: add_expr '-' . mult_expr

    ID   shift, and go to state 1
    NEW  shift, and go to state 2
    '('  shift, and go to state 3

    new_expression  go to state 5
    mult_expr       go to state 30
    primary         go to state 8
    factor          go to state 9


state 18

   16 mult_expr: mult_expr '*' . primary

    ID   shift, and go to state 1
    NEW  shift, and go to state 2
    '('  shift, and go to state 3

    new_expression  go to state 5
    primary         go to state 31
    factor          go to state 9


state 19

   17 mult_expr: mult_expr '/' . primary

    ID   shift, and go to state 1
    NEW  shift, and go to state 2
    '('  shift, and go to state 3

    new_expression  go to state 5
    primary         go to state 32
    factor          go to state 9


state 20

    8 direct_new_declarator: '[' . add_expr ']'

    ID   shift, and go to state 1
    NEW  shift, and go to state 2
    '('  shift, and go to state 3

    new_expression  go to state 5
    add_expr        go to state 33
    mult_expr       go to state 7
    primary         go to state 8
    factor          go to state 9


state 21

   10 ptr_operator: '*' .

    $default  reduce using rule 10 (ptr_operator)


state 22

   11 ptr_operator: '&' .

    $default  reduce using rule 11 (ptr_operator)


state 23

    7 new_declarator_opt: new_declarator .

    $default  reduce using rule 7 (new_declarator_opt)


state 24

    3 new_type_id: type_specifier new_declarator_opt .

    $default  reduce using rule 3 (new_type_id)


state 25

    5 new_declarator: direct_new_declarator .

    $default  reduce using rule 5 (new_declarator)


state 26

    4 new_declarator: ptr_operator . new_declarator_opt

    '['  shift, and go to state 20
    '*'  shift, and go to state 21
    '&'  shift, and go to state 22

    '*'       [reduce using rule 6 (new_declarator_opt)]
    $default  reduce using rule 6 (new_declarator_opt)

    new_declarator         go to state 23
    new_declarator_opt     go to state 34
    direct_new_declarator  go to state 25
    ptr_operator           go to state 26


state 27

   21 factor: '(' ID ')' . factor

    ID   shift, and go to state 1
    '('  shift, and go to state 3

    factor  go to state 35


state 28

   20 factor: '(' add_expr ')' .

    $default  reduce using rule 20 (factor)


state 29

   13 add_expr: add_expr '+' mult_expr .
   16 mult_expr: mult_expr . '*' primary
   17          | mult_expr . '/' primary

    '*'  shift, and go to state 18
    '/'  shift, and go to state 19

    $default  reduce using rule 13 (add_expr)


state 30

   14 add_expr: add_expr '-' mult_expr .
   16 mult_expr: mult_expr . '*' primary
   17          | mult_expr . '/' primary

    '*'  shift, and go to state 18
    '/'  shift, and go to state 19

    $default  reduce using rule 14 (add_expr)


state 31

   16 mult_expr: mult_expr '*' primary .

    $default  reduce using rule 16 (mult_expr)


state 32

   17 mult_expr: mult_expr '/' primary .

    $default  reduce using rule 17 (mult_expr)


state 33

    8 direct_new_declarator: '[' add_expr . ']'
   13 add_expr: add_expr . '+' mult_expr
   14         | add_expr . '-' mult_expr

    ']'  shift, and go to state 36
    '+'  shift, and go to state 16
    '-'  shift, and go to state 17


state 34

    4 new_declarator: ptr_operator new_declarator_opt .

    $default  reduce using rule 4 (new_declarator)


state 35

   21 factor: '(' ID ')' factor .

    $default  reduce using rule 21 (factor)


state 36

    8 direct_new_declarator: '[' add_expr ']' .

    $default  reduce using rule 8 (direct_new_declarator)
